Prevent text clipping on download buttons

--- a/static/css/ui.css
+++ b/static/css/ui.css
@@ -33,7 +33,6 @@
     margin: 8px 0px;
     text-align: center;
     user-select: none;
-    white-space: nowrap;
     overflow: hidden;
 }
 
